// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blockquote should return a blockquote object 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "raw": "foo",
            "text": "foo",
            "type": "text_inline",
          },
        ],
        "raw": "foo",
        "text": "foo",
        "type": "text_block",
      },
    ],
    "raw": "> foo
",
    "text": "foo",
    "type": "blockquote",
  },
  {
    "children": [
      {
        "children": [
          {
            "raw": "bar",
            "text": "bar",
            "type": "text_inline",
          },
        ],
        "raw": "bar",
        "text": "bar",
        "type": "text_block",
      },
    ],
    "raw": "> bar
",
    "text": "bar",
    "type": "blockquote",
  },
  {
    "children": [
      {
        "children": [
          {
            "raw": "baz",
            "text": "baz",
            "type": "text_inline",
          },
        ],
        "raw": "baz",
        "text": "baz",
        "type": "text_block",
      },
    ],
    "raw": "> baz",
    "text": "baz",
    "type": "blockquote",
  },
]
`;

exports[`indented code block should return the indented_code_block token 1`] = `
[
  {
    "raw": "    a simple
      indented code block
",
    "text": "a simple
  indented code block",
    "type": "indented_code_block",
  },
]
`;

exports[`thematic break should return the thematic_break token 1`] = `
[
  {
    "raw": "***
",
    "type": "thematic_break",
  },
  {
    "raw": "---
",
    "type": "thematic_break",
  },
  {
    "raw": "___
",
    "type": "thematic_break",
  },
]
`;

exports[`tokenize headers h1 ... h6 1`] = `
[
  {
    "children": [
      {
        "raw": "foo",
        "text": "foo",
        "type": "text_inline",
      },
    ],
    "level": 1,
    "raw": "# foo
",
    "text": "foo",
    "type": "heading",
  },
  {
    "children": [
      {
        "raw": "foo",
        "text": "foo",
        "type": "text_inline",
      },
    ],
    "level": 2,
    "raw": " ## foo
",
    "text": "foo",
    "type": "heading",
  },
  {
    "children": [
      {
        "raw": "foo",
        "text": "foo",
        "type": "text_inline",
      },
    ],
    "level": 3,
    "raw": " ### foo
",
    "text": "foo",
    "type": "heading",
  },
  {
    "children": [
      {
        "raw": "foo",
        "text": "foo",
        "type": "text_inline",
      },
    ],
    "level": 4,
    "raw": " #### foo
",
    "text": "foo",
    "type": "heading",
  },
  {
    "children": [
      {
        "raw": "foo",
        "text": "foo",
        "type": "text_inline",
      },
    ],
    "level": 5,
    "raw": " ##### foo
",
    "text": "foo",
    "type": "heading",
  },
  {
    "children": [
      {
        "raw": "foo",
        "text": "foo",
        "type": "text_inline",
      },
    ],
    "level": 6,
    "raw": " ###### foo
",
    "text": "foo",
    "type": "heading",
  },
]
`;

exports[`tokenize headers with inline text decoration 1`] = `
[
  {
    "children": [
      {
        "raw": "foo ",
        "text": "foo ",
        "type": "text_inline",
      },
      {
        "children": [
          {
            "raw": "bar",
            "text": "bar",
            "type": "text_inline",
          },
        ],
        "raw": "**bar**",
        "text": "bar",
        "type": "bold",
      },
      {
        "raw": " baz",
        "text": " baz",
        "type": "text_inline",
      },
    ],
    "level": 1,
    "raw": "# foo **bar** baz",
    "text": "foo **bar** baz",
    "type": "heading",
  },
]
`;

exports[`tokenizer get the appropriate tokens 1`] = `
[
  {
    "children": [
      {
        "raw": "Foo",
        "text": "Foo",
        "type": "text_inline",
      },
    ],
    "level": 2,
    "raw": "## Foo
",
    "text": "Foo",
    "type": "heading",
  },
  {
    "children": [
      {
        "raw": "foo",
        "text": "foo",
        "type": "text_inline",
      },
    ],
    "raw": "foo
",
    "text": "foo",
    "type": "text_block",
  },
  {
    "children": [
      {
        "children": [
          {
            "raw": "foo",
            "text": "foo",
            "type": "text_inline",
          },
        ],
        "raw": "**foo**",
        "text": "foo",
        "type": "bold",
      },
    ],
    "raw": "**foo**
",
    "text": "**foo**",
    "type": "text_block",
  },
  {
    "children": [
      {
        "raw": "foo ",
        "text": "foo ",
        "type": "text_inline",
      },
      {
        "children": [
          {
            "raw": "bar",
            "text": "bar",
            "type": "text_inline",
          },
        ],
        "raw": "**bar**",
        "text": "bar",
        "type": "bold",
      },
      {
        "raw": " baz",
        "text": " baz",
        "type": "text_inline",
      },
    ],
    "raw": "foo **bar** baz",
    "text": "foo **bar** baz",
    "type": "text_block",
  },
]
`;

exports[`tokenizer with inline content 1`] = `
[
  {
    "children": [
      {
        "raw": "foo ",
        "text": "foo ",
        "type": "text_inline",
      },
      {
        "children": [
          {
            "raw": "bar",
            "text": "bar",
            "type": "text_inline",
          },
        ],
        "raw": "*bar*",
        "text": "bar",
        "type": "italic",
      },
      {
        "raw": " ",
        "text": " ",
        "type": "text_inline",
      },
      {
        "children": [
          {
            "raw": "baz",
            "text": "baz",
            "type": "text_inline",
          },
        ],
        "raw": "**baz**",
        "text": "baz",
        "type": "bold",
      },
      {
        "raw": " ",
        "text": " ",
        "type": "text_inline",
      },
      {
        "children": [
          {
            "children": [
              {
                "raw": "qux",
                "text": "qux",
                "type": "text_inline",
              },
            ],
            "raw": "*qux*",
            "text": "qux",
            "type": "italic",
          },
        ],
        "raw": "***qux***",
        "text": "*qux*",
        "type": "bold",
      },
    ],
    "raw": "foo *bar* **baz** ***qux***",
    "text": "foo *bar* **baz** ***qux***",
    "type": "text_block",
  },
]
`;
